--- a/index.htm
+++ b/index.htm
@@ -215,10 +215,10 @@ Energy (MPCE), 2021 </li>
         <li>CAA Second Prize of National Natural Science, Award, 2022
         <li>MPCE Excellent Reviewer Award, 2022
         <li>The Best Paper Award from 2023 International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE), 2023
-        <li>1200+ citations according to Google scholar</li>
-        <li>H-index: 15 </li>
+        <li>1400+ citations according to Google scholar</li>
+        <li>H-index: 16 </li>
         <li>2 ESI “Hot papers” and 5 ESI “Highly cited papers”</li>
-        <li>34 published papers (15 first author; 3 corresponding author; 18 IEEE Transactions)
+        <li>41 published papers (16 first author; 3 corresponding author; 18 IEEE Transactions)
         </ul>
     </div>
     
@@ -254,6 +254,7 @@ Energy (MPCE), 2021 </li>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Co-Author]</span>&nbsp;&nbsp;</p>
 
 <ol class="rc">
+ <li> Y. Huang, Q. Sun, <b>Y. Li</b>., et al, “Damping technique empowered robust energy flow calculation for integrated energy systems," <p><i>Applied Energy</i>, vol. 343, pp. 121168, 2023.
 <li>R. Wang, W. Li, Q. Sun, and <b>Y. Li</b>, et al, “Fully distributed dynamic edge-event-triggered current sharing control strategy for multi-bus dc microgrids with power coupling," <p><i>IEEE Transactions on Industrial Informatics</i>, doi: 10.1109/TII.2022.3188352, 2022.
 <li>Z. Ming, H. Zhang, <b>Y. Li</b> and Y. Liang, "Mixed  $H_2/H_\infty$  Control for Nonlinear Closed-Loop Stackelberg Games With Application to Power Systems," <p><i>IEEE Transactions on Automation Science and Engineering</i>, doi: 10.1109/TASE.2022.3216733, 2022.
 <li>Y. Huang, Q. Sun, and <b>Y. Li</b>, et al., “Adaptive-discretization based dynamic optimal energy flow for the heat-electricity integrated energy systems with hybrid ac/dc power sources,” <p><i>IEEE Transactions on Automation Science and Engineering</i>, doi: 10.1109/TASE.2022.3188277, 2022.
