--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
     <title>Welcome to Yushuai Li's Homepage</title>
     <meta name="description" content="Homepage of Yushuai Li" />
-    <meta name="keywords" content="Yushuai Li, Homepage, University of Oslo, Department of Informatics" />
+    <meta name="keywords" content="Yushuai Li, Homepage, Aalborg University, Department of Computer Science" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="pragma" content="no-cache" />
     <style type="text/css">
