--- a/index.htm
+++ b/index.htm
@@ -182,7 +182,7 @@
     <hr/>
     <div id="bio" class="contentWrap">
         <h3>Short Bio</h3>
-        <p style="line-height:1.4"> Dr. Yushuai Li is an assistant professor in Department of Computer Science at <a href="https://www.uio.no/english/">of Aalborg University </a>. He received the Ph.D. degree in control theory and control engineering from <a href="http://english.neu.edu.cn/">Northeastern University</a>, China in 2019.  From 2019 to 2020, she worked as a Postdoc in the Department of Electrical and Computer Engineering, <a href="https://www.du.edu/">University of Denver</a>, Colorado, USA. From  2020 to 2022, he worked as a lecture in College of Information Science and Engibeering, <a href="http://english.neu.edu.cn/">Northeastern University</a>, China.  He joined University of Oslo in January 2022.</p>
+        <p style="line-height:1.4"> Dr. Yushuai Li is an assistant professor in Department of Computer Science at <a href="https://www.en.aau.dk/ ">Aalborg University </a>. He received the Ph.D. degree in control theory and control engineering from <a href="http://english.neu.edu.cn/">Northeastern University</a>, China in 2019.  From 2019 to 2020, she worked as a Postdoc in the Department of Electrical and Computer Engineering, <a href="https://www.du.edu/">University of Denver</a>, Colorado, USA. From  2020 to 2022, he worked as a lecture in College of Information Science and Engibeering, <a href="http://english.neu.edu.cn/">Northeastern University</a>, China.  He joined University of Oslo in January 2022.</p>
     </div>
 
 
