--- a/index.htm
+++ b/index.htm
@@ -211,14 +211,13 @@
         <li> The Best Paper Award from Journal of Modern Power Systems and Clean
 Energy (MPCE), 2021 </li>
         <li>The Most Popular Academic Works Award from CCDC, 2021
-        <li>The Excellent Young Expert Award from MPCE, 2022&2023
+        <li>The Excellent Young Expert Award from MPCE, 2023
         <li>CAA Second Prize of National Natural Science, Award, 2022
-        <li>MPCE Excellent Reviewer Award, 2022
+         <li> CAA First Prize of National Natural Science, 2023
+        <li>MPCE Excellent Reviewer Award, 2022 &2023
         <li>The Best Paper Award from 2023 International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE), 2023
-        <li>1400+ citations according to Google scholar</li>
-        <li>H-index: 16 </li>
+        <li>1700+ citations according to Google scholar</li>
         <li>2 ESI “Hot papers” and 5 ESI “Highly cited papers”</li>
-        <li>41 published papers (16 first author; 3 corresponding author; 18 IEEE Transactions)
         </ul>
     </div>
     
@@ -231,6 +230,9 @@ Energy (MPCE), 2021 </li>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Primary/Corresponding Author]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
+ <li>S. Liu,<b>Y. Li</b>, and T. Li, et al., “FedAGL: A Communication-Efficient Federated Vehicular Network,"  IEEE Transactions on Intelligent Vehicles, doi: 10.1109/TIV.2024.3349655, 2024.
+<li>R. Ren, <b>Y. Li</b>, Q. Sun, S. Zhang, D. W. Gao and S. Maharjan, “Switched Surplus-Based Distributed Security Dispatch for Smart Grid With Persistent Packet Loss,” IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3311758,2023.
+<li>X. Zhang, <b>Y. Li</b>, and T. Li, et al., “Digital Twin Empowered PV Power Prediction,” Journal of Modern Power Systems and Clean Energy, accepted, 2023. 
 <li><b>Y. Li</b>, B. Huang, J. Dai, D. W. Gao, Q. Sun and H. Zhang, “Distributed Resilient Initialization-Free Jacobi Descent Algorithm for Constrained Optimization Against DoS Attacks," <p><i>IEEE Transactions on Automation Science and Engineering</i>, doi: 10.1109/TASE.2023.3278865, 2023.
 <li><b>Y. Li</b> and Y. Zhang, “Digital twin for industrial internet,” <p><i>Fundamental Research</i>, 2023.
 <li><b>Y. Li</b>, R, Ren, B. Huang, et al., “Distributed hybrid-triggering-based secure dispatch approach for smart grid against DoS attacks,” <p><i>IEEE Transactions on Systems, Man, and Cybernetics: Systems</i>, doi: 10.1109/TSMC.2022.3228780, 2022. 
@@ -246,9 +248,6 @@ Energy (MPCE), 2021 </li>
 <li><b>Y. Li</b>, H. Zhang, and B. Huang, et al., “A distributed Newton-Raphson-based coordination algorithm for multi-agent optimization with discrete-time communication,” <p><i>Neural Computing & Applications</i>, vol. 32, pp. 4649–4663, 2020. 
 <li><b>Y. Li</b>, B. Huang, and H. Zhang, “Synchronization analysis for coupled static neural networks with stochastic disturbance and interval time-varying delay,” <p><i>Neural Computing & Applications</i>, vol. 30, no. 4, pp. 1123–1132. 2018. 
 <li><b>Y. Li</b>, H. Zhang, and J. Han, et al., “Distributed multi-agent optimization via event-triggered based continuous-time Newton-Raphson algorithm,” <p><i>Neurocomputing</i>, vol. 275, no. 31, pp. 1416-1425, 2018. 
-<li><b>Y. Li</b>, T. Li, and J. Zhou, et al., “Double-consensus based distributed optimal energy management for multiple energy hubs,” <p><i>Applied Sciences</i>, vol. 8, no. 9, pp. 1412, 2018.
-<li><b>Y. Li</b>, H. Zhang, and B. Huang, et al, “Distributed optimal economic dispatch based on multi-agent system framework in combined heat and power systems,” <p><i>Applied Sciences</i>, vol. 6, no. 10, pp. 308, 2016.
-<li><b>Y. Li</b>, D. Ma, and H. Zhang, et al., “Critical nodes identification of power systems based on controllability of complex networks,” <p><i>Applied Sciences</i>, vol . 5, no. 3, pp. 622-636, 2015.
  </ol>
 
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Co-Author]</span>&nbsp;&nbsp;</p>
