--- a/index.htm
+++ b/index.htm
@@ -230,8 +230,8 @@ Energy (MPCE), 2021 </li>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Primary/Corresponding Author]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
- <li>S. Liu,<b>Y. Li</b>, and T. Li, et al., “FedAGL: A Communication-Efficient Federated Vehicular Network,"  IEEE Transactions on Intelligent Vehicles, doi: 10.1109/TIV.2024.3349655, 2024.
-<li>R. Ren, <b>Y. Li</b>, Q. Sun, S. Zhang, D. W. Gao and S. Maharjan, “Switched Surplus-Based Distributed Security Dispatch for Smart Grid With Persistent Packet Loss,” IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3311758,2023.
+ <li>S. Liu, <b>Y. Li</b>*, and T. Li, et al., “FedAGL: A Communication-Efficient Federated Vehicular Network,"  IEEE Transactions on Intelligent Vehicles, doi: 10.1109/TIV.2024.3349655, 2024.
+<li>R. Ren, <b>Y. Li</b>*, Q. Sun, S. Zhang, D. W. Gao and S. Maharjan, “Switched Surplus-Based Distributed Security Dispatch for Smart Grid With Persistent Packet Loss,” IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3311758,2023.
 <li>X. Zhang, <b>Y. Li</b>, and T. Li, et al., “Digital Twin Empowered PV Power Prediction,” Journal of Modern Power Systems and Clean Energy, accepted, 2023. 
 <li><b>Y. Li</b>, B. Huang, J. Dai, D. W. Gao, Q. Sun and H. Zhang, “Distributed Resilient Initialization-Free Jacobi Descent Algorithm for Constrained Optimization Against DoS Attacks," <p><i>IEEE Transactions on Automation Science and Engineering</i>, doi: 10.1109/TASE.2023.3278865, 2023.
 <li><b>Y. Li</b> and Y. Zhang, “Digital twin for industrial internet,” <p><i>Fundamental Research</i>, 2023.
@@ -253,6 +253,9 @@ Energy (MPCE), 2021 </li>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Co-Author]</span>&nbsp;&nbsp;</p>
 
 <ol class="rc">
+<li> Zhou J, Guo Y, Yang L, J. Shi, Y. Zhang,  <b>Y. Li</b>, Q. Guo, H. Sun, “A review on frequency management for low-inertia power systems: From inertia and fast frequency response perspectives,” Electric Power Systems Research, vol. 228, pp. 110095, 2024. 
+<li> X. Wang, Y. Zhou, B. Luo, <b>Y. Li</b> and T. Huang, "Event-Triggered Neuro-Adaptive Fixed-Time Control for Nonlinear Switched and Constrained Systems: An Initial Condition-Independent Method," IEEE Transactions on Circuits and Systems I: Regular Papers, doi: 10.1109/TCSI.2023.3342070, 2024. 
+ <li> Z. Liu, B. Huang, <b>Y. Li</b>, et al, "Pricing Game and Blockchain for Electricity Data Trading in Low-Carbon Smart Energy Systems," in IEEE Transactions on Industrial Informatics, doi: 10.1109/TII.2023.3345450, 2024. 
  <li> Y. Huang, Q. Sun, <b>Y. Li</b>., et al, “Damping technique empowered robust energy flow calculation for integrated energy systems," <p><i>Applied Energy</i>, vol. 343, pp. 121168, 2023.
 <li>R. Wang, W. Li, Q. Sun, and <b>Y. Li</b>, et al, “Fully distributed dynamic edge-event-triggered current sharing control strategy for multi-bus dc microgrids with power coupling," <p><i>IEEE Transactions on Industrial Informatics</i>, doi: 10.1109/TII.2022.3188352, 2022.
 <li>Z. Ming, H. Zhang, <b>Y. Li</b> and Y. Liang, "Mixed  $H_2/H_\infty$  Control for Nonlinear Closed-Loop Stackelberg Games With Application to Power Systems," <p><i>IEEE Transactions on Automation Science and Engineering</i>, doi: 10.1109/TASE.2022.3216733, 2022.
