--- a/index.htm
+++ b/index.htm
@@ -163,14 +163,14 @@
                     </td>
                     <td style="padding-left: 40px">
                         <h2 class="clr1" style="margin: 0 0 15px 0">Yushuai Li(李玉帅)</h2>
-                        <h3 style="font-weight: bold;">Marie Curie Postdoctoral Fellow Ph.D.</h3>
+                        <h3 style="font-weight: bold;">Assitant Professor</h3>
 
-                        <a href="https://www.cs.aau.dk/">Department of Informatics,</a><br/>
-                        <a href="https://www.en.aau.dk/">University of Oslo,</a><br/>Gaustadalléen 23B 0373，Oslo，Norway
+                        <a href="https://www.cs.aau.dk/">Department of Computer Science,</a><br/>
+                        <a href="https://www.en.aau.dk/"> Aalborg University,</a><br/>Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark
 
                         <br/><br/>
-                        <b>Office:</b>&nbsp;4451 <br/>
-                        <b>E-mail:</b>&nbsp;yushuaili@ieee.org / yushual@ifi.uio.no
+                        <b>Office:</b>&nbsp;3.2.38<br/>
+                        <b>E-mail:</b>&nbsp;yushaili@ieee.org / yushual@ifi.uio.no
 
                     </td>
                 </tr>
