--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
 
                         <br/><br/>
                         <b>Office:</b>&nbsp;3.2.38<br/>
-                        <b>E-mail:</b>&nbsp;yushaili@ieee.org / yushual@ifi.uio.no
+                        <b>E-mail:</b>&nbsp;yushaili@ieee.org / yusli@cs.aau.dk
 
                     </td>
                 </tr>
@@ -182,7 +182,7 @@
     <hr/>
     <div id="bio" class="contentWrap">
         <h3>Short Bio</h3>
-        <p style="line-height:1.4"> Dr. Yushuai Li is an assistant professor in Department of Computer Science at <a href="https://www.en.aau.dk/ ">Aalborg University </a>. He has published more than 50 papers in prestigious journals and conferences. Two of them are “Hot Papers and five of them are "Highly Cited Papers". He has an h-index of 17 and 1700+ citations according to Google scholar. As the first author, he received the Best Paper Awards from Journal of Modern Power Systems and Clean Energy (MPCE), and 2023 International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE). He received the Excellent Young Expert Award from MPCE (2023), the CAA Second Prize of National Natural Science (2022), the CAA First Prize of National Natural Science (2023). He is an associated editor of MPCE. He served as the Student Video / PHD Thesis Competition Chair for IEEE SmartGridComm 2024, Section Chair for SPIES 2022 and IEEE EI2 2022, and Track Chair for ISIE 2024. </p>
+        <p style="line-height:1.4"> Dr. Yushuai Li is an assistant professor in Department of Computer Science at <a href="https://www.en.aau.dk/ ">Aalborg University</a>. He has published more than 50 papers in prestigious journals and conferences. Two of them are “Hot Papers and five of them are "Highly Cited Papers". He has an h-index of 17 and 1700+ citations according to Google scholar. As the first author, he received the Best Paper Awards from Journal of Modern Power Systems and Clean Energy (MPCE), and 2023 International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE). He received the Excellent Young Expert Award from MPCE (2023), the CAA Second Prize of National Natural Science (2022), the CAA First Prize of National Natural Science (2023). He is an associated editor of MPCE. He served as the Student Video / PHD Thesis Competition Chair for IEEE SmartGridComm 2024, Section Chair for SPIES 2022 and IEEE EI2 2022, and Track Chair for ISIE 2024. </p>
     </div>
 
 
@@ -232,7 +232,7 @@ Energy (MPCE), 2021 </li>
 <ol class="rj">
  <li>S. Liu, <b>Y. Li</b>*, and T. Li, et al., “FedAGL: A Communication-Efficient Federated Vehicular Network,"  IEEE Transactions on Intelligent Vehicles, doi: 10.1109/TIV.2024.3349655, 2024.
 <li>R. Ren, <b>Y. Li</b>*, Q. Sun, S. Zhang, D. W. Gao and S. Maharjan, “Switched Surplus-Based Distributed Security Dispatch for Smart Grid With Persistent Packet Loss,” IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3311758,2023.
-<li>X. Zhang, <b>Y. Li</b>, and T. Li, et al., “Digital Twin Empowered PV Power Prediction,” Journal of Modern Power Systems and Clean Energy, accepted, 2023. 
+<li>X. Zhang, <b>Y. Li</b>*, and T. Li, et al., “Digital Twin Empowered PV Power Prediction,” Journal of Modern Power Systems and Clean Energy, accepted, 2023. 
 <li><b>Y. Li</b>, B. Huang, J. Dai, D. W. Gao, Q. Sun and H. Zhang, “Distributed Resilient Initialization-Free Jacobi Descent Algorithm for Constrained Optimization Against DoS Attacks," <p><i>IEEE Transactions on Automation Science and Engineering</i>, doi: 10.1109/TASE.2023.3278865, 2023.
 <li><b>Y. Li</b> and Y. Zhang, “Digital twin for industrial internet,” <p><i>Fundamental Research</i>, 2023.
 <li><b>Y. Li</b>, R, Ren, B. Huang, et al., “Distributed hybrid-triggering-based secure dispatch approach for smart grid against DoS attacks,” <p><i>IEEE Transactions on Systems, Man, and Cybernetics: Systems</i>, doi: 10.1109/TSMC.2022.3228780, 2022. 
@@ -317,6 +317,12 @@ Energy (MPCE), 2021 </li>
 <li>The 33th  Industrial Symposium on Industrial Electronics (ISIE) , Topic: Signal and Image Processing and Computational Intelligence, 2024. </li>
             
         </ul>
+
+  <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Student Video / PHD Thesis Competition Chair]</p>
+        <ul>
+              <li> The 15th IEEE International Conference on Smart Grid Communications (SmartGridComm), 2024
+        </ul>
+        
 
     <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Associated Editor]</p>
         <ul>
