--- a/index.htm
+++ b/index.htm
@@ -163,7 +163,7 @@
                     </td>
                     <td style="padding-left: 40px">
                         <h2 class="clr1" style="margin: 0 0 15px 0">Yushuai Li(李玉帅)</h2>
-                        <h3 style="font-weight: bold;">Assitant Professor</h3>
+                        <h3 style="font-weight: bold;">Assistant Professor</h3>
 
                         <a href="https://www.cs.aau.dk/">Department of Computer Science,</a><br/>
                         <a href="https://www.en.aau.dk/"> Aalborg University,</a><br/>Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark
