--- a/index.htm
+++ b/index.htm
@@ -328,7 +328,8 @@ Energy (MPCE), 2021 </li>
 
     <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Associated Editor]</p>
         <ul>
-              <li> Journal of Modern Power Systems and Clean Energ, 2024-now
+            <li>  IEEE Systems, Man, and Cybernetics Magazine, 2024-now  
+            <li> Journal of Modern Power Systems and Clean Energ, 2024-now
         </ul>
         
 
@@ -349,7 +350,7 @@ Energy (MPCE), 2021 </li>
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PC Member]</p>
         <ul>
-        <li> he 38th AAAI Conference on Artificial Intelligence (AAAI), 2024
+        <li> The 38th AAAI Conference on Artificial Intelligence (AAAI), 2024
         <li> International Annual Conference on Complex Systems and Intelligent Science, 2023
         <li>IEEE/ACM International Symposium on Quality of Service, 2022
         <li>The 4th International Conference on Smart Power & Internet Energy Systems, 2022.
