--- a/index.htm
+++ b/index.htm
@@ -182,7 +182,7 @@
     <hr/>
     <div id="bio" class="contentWrap">
         <h3>Short Bio</h3>
-        <p style="line-height:1.4"> Dr. Yushuai Li is an assistant professor in Department of Computer Science at <a href="https://www.en.aau.dk/ ">Aalborg University</a>. He has published more than 50 papers in prestigious journals and conferences. Two of them are “Hot Papers and five of them are "Highly Cited Papers". He has an h-index of 17 and 1700+ citations according to Google scholar. As the first author, he received the Best Paper Awards from Journal of Modern Power Systems and Clean Energy (MPCE), and 2023 International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE). He received the Excellent Young Expert Award from MPCE (2023), the CAA Second Prize of National Natural Science (2022), the CAA First Prize of National Natural Science (2023). He is an associated editor of MPCE. He served as the Student Video / PHD Thesis Competition Chair for IEEE SmartGridComm 2024, Section Chair for SPIES 2022 and IEEE EI2 2022, and Track Chair for ISIE 2024. </p>
+        <p style="line-height:1.4"> Dr. Yushuai Li is an assistant professor in Department of Computer Science at <a href="https://www.en.aau.dk/ ">Aalborg University</a>. He has published more than 50 papers in prestigious journals and conferences. Two of them are “Hot Papers and five of them are "Highly Cited Papers". He has an h-index of 18 and 1900+ citations according to Google scholar. As the first author, he received the Best Paper Awards from Journal of Modern Power Systems and Clean Energy (MPCE), and 2023 International Conference on Cyber-energy Systems and Intelligent Energies (ICCSIE). He received the Excellent Young Expert Award from MPCE (2023), the CAA Second Prize of National Natural Science (2022), the CAA First Prize of National Natural Science (2023). He is an associated editor of IEEE Systems, Man, and Cybernetics Magazine, and MPCE. He served as the Student Video / PHD Thesis Competition Chair for IEEE SmartGridComm 2024, Section Chair for SPIES 2022 and IEEE EI2 2022, and Track Chair for ISIE 2024. </p>
     </div>
 
 
@@ -218,8 +218,8 @@ Energy (MPCE), 2021 </li>
         <li>CAA Second Prize of National Natural Science, Award, 2022
          <li> CAA First Prize of National Natural Science, 2023
         <li>MPCE Excellent Reviewer Award, 2022 &2023
-        <li>1700+ citations according to Google scholar</li>
-        <li>2 ESI “Hot papers” and 5 ESI “Highly cited papers”</li>
+        <li>1900+ citations according to Google scholar</li>
+        <li>2 ESI “Hot papers” and 6 ESI “Highly cited papers”</li>
         </ul>
     </div>
     
