--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
 
                         <br/><br/>
                         <b>Office:</b>&nbsp;3.2.38<br/>
-                        <b>E-mail:</b>&nbsp;yushaili@ieee.org / yusli@cs.aau.dk
+                        <b>E-mail:</b>&nbsp;yushuaili@ieee.org / yusli@cs.aau.dk
 
                     </td>
                 </tr>
