--- a/index.htm
+++ b/index.htm
@@ -309,7 +309,7 @@ Energy (MPCE), 2021 </li>
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Membership]</p>
         <ul>
             <li>
-                IEEE Member, IEEE IES Member, IEEE PES Member, and IEEE Young Professionals
+                IEEE Senior Member, IEEE IES Member, IEEE PES Member, and IEEE Young Professionals
         </ul>
 
  <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Session/Track/Workshop Chair]</p>
