--- a/index.htm
+++ b/index.htm
@@ -329,6 +329,7 @@ Energy (MPCE), 2021 </li>
 
     <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Associated Editor]</p>
         <ul>
+            <li> IEEE Transactions on Industrial Informatics, 2024-now 
             <li>  IEEE Systems, Man, and Cybernetics Magazine, 2024-now  
             <li> Journal of Modern Power Systems and Clean Energ, 2024-now
         </ul>
