--- a/index.htm
+++ b/index.htm
@@ -219,7 +219,7 @@
 	        <li>  The CAA Second Prize of National Natural Science, 2022 </li>
 	         <li>  The Excellent Reviewer Award, MPCE, 2022 </li>
 	          <li>  The Best Paper Award (First author), MPCE, 2021 </li>
-	           <li>  2500+ citations and H-index 23 according to Google Scholar </li>
+	           <li>  3200+ citations and H-index 27 according to Google Scholar </li>
 	            <li>  2 ESI “Hot papers” and 8 ESI “Highly cited papers” </li>
         </ul>
     </div>
@@ -232,11 +232,10 @@
         <a href="https://scholar.google.com/citations?hl=en&user=z8kdgucAAAAJ"> google scholar entry </a>
         
         <ul>
-                 <p style="line-height:1.4"> 70+ publications, including 3 CORE A* papers, 1 CORE A paper, 42 papers in DBLP, 36 IEEE Transactions/Magazine papers.</p>
+                 <p style="line-height:1.4"> 100+ publications.</p>
                 </ul>
 
 <ol class="rj">
-
 <li>Y. Huang, Q. Sun, Z. Chen, D.W. Gao, T.B. Pedersen, K.G. Larsen, and <b>Y. Li</b>, “Dynamic Modeling and Analysis for Electricity-Gas Systems with Electric-driven Compressors,” <i>IEEE Transactions on Smart Grid</i>, doi: 10.1109/TSG.2025.3527221, 2025.
 <li>F. Teng, X. Zhang, T. Li, Q. Shan, C. L. P. Chen, and <b>Y. Li</b>, “Distributed Resilient Energy Management for Seaport Microgrid Against Stealthy Attacks With Limited Security Defense Resource,” <i>IEEE Transactions on Cybernetics</i>, doi: 10.1109/TCYB.2024.3514693, 2025.
 <li>Z. Song, Y. Gu, T. Li, <b>Y. Li</b>, Q. Sun, Y. Zhang, C. S. Jensen, and G. Yu, “SWASH: A Flexible Communication Framework with Sliding Window-Based Cache Sharing for Scalable DGNN Training,” <i>The ACM SIGMOD International Conference on Management of Data</i> (<b>SIGMOD</b>), 2025. (Accepted, to appear; <b>CORE A*</b>)
@@ -435,3 +434,4 @@
 </body>
 
 </html>
+
